--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,12 @@
-# 웹 크롤링 관련
-requests==2.31.0
-beautifulsoup4==4.12.2
-selenium==4.15.2
-lxml==4.9.3
+# ✅ 크롤링 기본
+requests
+beautifulsoup4
 
-# 데이터 처리 및 분석
-pandas==2.1.3
-numpy==1.25.2
+# ✅ 데이터 처리
+pandas
+numpy
 
-# 대시보드 및 시각화
-streamlit==1.28.1
-plotly==5.17.0
-
-# 이미지 처리 (OCR - 선택사항)
-# pytesseract==0.3.10
-# Pillow==10.0.1
-
-# 유틸리티
-pathlib2==2.3.7
+# ✅ 스트림릿 대시보드
+streamlit
+plotly
+altair
